--- a/css/Church_layout.css
+++ b/css/Church_layout.css
@@ -82,7 +82,7 @@ body{
     transition: margin-right .5s;
     padding: 20px;
 	color: fff;
-	float: right;
+	float: left;
 	font-family: 'Roboto', sans-serif;
 }
 
@@ -180,7 +180,7 @@ body{
     position: fixed; /* Stay in place */
     z-index: 1; /* Stay on top */
     top: 0;
-    right: 0;
+    left: 0;
     background-color: #111; /* Black*/
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 60px; /* Place content 60px from the top */
