--- a/css/About_layout.css
+++ b/css/About_layout.css
@@ -43,7 +43,7 @@ body{
 /* ------------------------------------
 			Header Properties
    ------------------------------------ */
-   
+/*   
 .nav-bar{
 	background-color: #000000;
 	width: 100%;
@@ -162,7 +162,7 @@ body{
 	top: 5px;
 	left: 20px;
 }
-
+*/
 
 /*-----------------------------------------------
 				Footer Properties
@@ -198,6 +198,81 @@ body{
 	text-decoration: none;
 }
 
+
+/*
+	---------------------------------------------------------------
+
+
+
+
+						Side Menu Bar Pop Out
+	
+	
+	
+	
+	
+	
+	---------------------------------------------------------------
+*/
+
+/* The side navigation menu */
+.sidenav {
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0;
+    left: 0;
+    background-color: #111; /* Black*/
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+}
+
+/* The navigation menu links */
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s
+}
+
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover, .offcanvas a:focus{
+    color: #f1f1f1;
+}
+
+/* Position and style the close button (top right corner) */
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+#main {
+    transition: margin-left .5s;
+    padding: 20px;
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+}
+
+#menu_nav{
+    transition: margin-right .5s;
+    padding: 20px;
+	color: fff;
+	float: left;
+	position: fixed;
+	font-family: 'Roboto', sans-serif;
+}
 
 
 
