--- a/css/Church_layout.css
+++ b/css/Church_layout.css
@@ -1,8 +1,15 @@
+html { 
+  background: url(../images/K1_WorshipBackground.png) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 body{
 	margin: 0;
 	padding: 0;
-	background-image: url(../images/K1_background.gif);
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Oswald', sans-serif;
 	letter-spacing: 5px;
 	color: white;
 	
@@ -11,13 +18,14 @@ body{
 
 .K1_Logo{
 	position: absolute;
-	width: 900px;
-	height: 500px;
+	width: 600px;
+	height: 400px;
 	display: block;
 	top: 0;
 	bottom: 0;
 	left: 0;
 	right: 0;
+	text-align: center;
 	margin: auto;
 }
 
@@ -32,130 +40,27 @@ body{
 .K1_Logo h1{
 	margin-bottom: 3px;
 	margin-top: 10px;
+	letter-spacing: 9px;
 }
 
 .K1_Logo  h3{
-	margin-bottom: 40px;
-	margin-top: 3px;
+	margin-bottom: 10px;
+	margin-top: 30px;
 }
 
-.nav-bar{
-	background-color: #000000;
-	width: 100%;
-	height: 80px;
-	opacity: .5;
-	border: 10px;
-	position: fixed;
-	top:0px;
-	left:0px;
-	z-index: -1;
+.K1_Logo h4{
+	margin-top: 30px;
+	margin-bottom: 5px;
 }
-
-.dropDown{
-    position: fixed;
-    right: 30px;
-    top: 25px;
-    display: inline-block;
-    vertical-align: middle;
-	z-index: 3;
-	width: 30px;
-	height: 25px;
-	border: none;
-    cursor: pointer;
-}
-
-#dropbtn{
-	transition: margin-left .5s;
-    padding: 20px;
-    right: 30px;
-    top: 25px;
-    display: inline-block;
-    vertical-align: middle;
-	z-index: 3;
-	width: 30px;
-	height: 25px;
-	border: none;
-    cursor: pointer;
-} 
 
 #menu_nav{
     transition: margin-right .5s;
     padding: 20px;
 	color: fff;
-	float: left;
+	float: right;
 	font-family: 'Roboto', sans-serif;
 }
 
-.span1 {
-	margin-top: 1px;
-	vertical-align: middle;
-	display: block;
-    position: absolute;
-    height: 4px;
-    width: 28px;
-    background: #fff;
-    opacity: 1;
-    left: 0;
-}
-
-.span2 {
-	margin-top: 9px;
-	vertical-align: middle;
-	display: block;
-    position: absolute;
-    height: 4px;
-    width: 28px;
-    background: #fff;
-    opacity: 1;
-    left: 0;
-}
-
-.span3 {
-	margin-top: 18px;
-	vertical-align: middle;
-	display: block;
-    position: absolute;
-    height: 4px;
-    width: 28px;
-    background: #fff;
-    opacity: 1;
-    left: 0;
-}
-
-@keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-.dropdown-content{
-	display: none;
-	position: fixed;
-	top: 27px;
-	width: 100%;
-	margin-left: auto;
-	margin-right: auto;
-	z-index: 2;
-	text-align: center;
-}
-
-.dropdown-content a{
-    color: white;
-    padding: 12px 25px;
-    text-decoration: none;
-	text-align: center;
-    display: inline;
-	font-family: 'Roboto', sans-serif;
-}
-
-.show{
-	display: block;
-}
-
-.logo{
-	position: fixed;
-	top: 5px;
-	left: 20px;
-}
 
 /*
 	---------------------------------------------------------------
@@ -180,7 +85,7 @@ body{
     position: fixed; /* Stay in place */
     z-index: 1; /* Stay on top */
     top: 0;
-    left: 0;
+    right: 0;
     background-color: #111; /* Black*/
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 60px; /* Place content 60px from the top */
