--- a/css/Staff_Layout.css
+++ b/css/Staff_Layout.css
@@ -3,7 +3,7 @@ body{
 	padding: 0;
 	font-family: 'Roboto', sans-serif;
 	letter-spacing: 1px;
-	
+	font-weight:200;
 }
 
 .header{
@@ -76,129 +76,6 @@ body{
     float: left;
 }
 
-/* ------------------------------------
-			Header Properties
-   ------------------------------------ */
-   
-.nav-bar{
-	background-color: #000000;
-	width: 100%;
-	height: 80px;
-	opacity: .5;
-	border: 10px;
-	position: fixed;
-	top:0px;
-	left:0px;
-	z-index: -1;
-}
-
-.dropDown{
-    position: fixed;
-    right: 30px;
-    top: 25px;
-    display: inline-block;
-    vertical-align: middle;
-	z-index: 3;
-	width: 30px;
-	height: 25px;
-	border: none;
-    cursor: pointer;
-}
-
- .dropbtn{
-	 position: fixed;
-    right: 30px;
-    top: 25px;
-    display: inline-block;
-    vertical-align: middle;
-	z-index: 3;
-	width: 30px;
-	height: 25px;
-	border: none;
-    cursor: pointer;
-} 
-
-.menu_nav{
-	color: fff;
-	right: 90px;
-	top: 27px;
-	width: 30px;
-	position: fixed;
-	z-index: 3;
-	font-family: 'Roboto', sans-serif;
-}
-
-.span1 {
-	margin-top: 1px;
-	vertical-align: middle;
-	display: block;
-    position: absolute;
-    height: 4px;
-    width: 28px;
-    background: #fff;
-    opacity: 1;
-    left: 0;
-}
-
-.span2 {
-	margin-top: 9px;
-	vertical-align: middle;
-	display: block;
-    position: absolute;
-    height: 4px;
-    width: 28px;
-    background: #fff;
-    opacity: 1;
-    left: 0;
-}
-
-.span3 {
-	margin-top: 18px;
-	vertical-align: middle;
-	display: block;
-    position: absolute;
-    height: 4px;
-    width: 28px;
-    background: #fff;
-    opacity: 1;
-    left: 0;
-}
-
-@keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-.dropdown-content{
-	display: none;
-	position: fixed;
-	top: 27px;
-	width: 100%;
-	margin-left: auto;
-	margin-right: auto;
-	z-index: 2;
-	text-align: center;
-}
-
-.dropdown-content a{
-    color: white;
-    padding: 12px 25px;
-    text-decoration: none;
-	text-align: center;
-    display: inline;
-	font-family: 'Roboto', sans-serif;
-}
-
-.show{
-	display: block;
-}
-
-.logo{
-	position: fixed;
-	top: 5px;
-	left: 20px;
-}
-
 /*-----------------------------------------------
 				Footer Properties
 -------------------------------------------------*/
@@ -210,6 +87,9 @@ body{
 	background-color: D8D8D8;
 	display: block;
 	text-align: center;
+	overflow: hidden;
+		overflow-x: hidden;
+		overflow-y: hidden;
 }
 
 .footer_links{
@@ -221,12 +101,88 @@ body{
 	display: block;
 	width: 75%;
 	height: 200px;
-	margin-right: 17%;
-	margin-left: 17%;
+	margin-right: -17px;
+	margin-left: -17px;
 	padding: 30px;
+	line-height: 2em;
 }
 
 .footer_text a{
 	color: black;
 	text-decoration: none;
+}
+
+/*
+	---------------------------------------------------------------
+
+
+
+
+						Side Menu Bar Pop Out
+	
+	
+	
+	
+	
+	
+	---------------------------------------------------------------
+*/
+
+/* The side navigation menu */
+.sidenav {
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0;
+    left: 0;
+    background-color: #111; /* Black*/
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+}
+
+/* The navigation menu links */
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s
+}
+
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover, .offcanvas a:focus{
+    color: #f1f1f1;
+}
+
+/* Position and style the close button (top right corner) */
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+#main {
+    transition: margin-left .5s;
+    padding: 20px;
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+}
+
+#menu_nav{
+    transition: margin-right .5s;
+	position: fixed;
+    padding: 20px;
+	color: fff;
+	float: left;
+	font-family: 'Roboto', sans-serif;
 }
