--- a/css/About_layout.css
+++ b/css/About_layout.css
@@ -2,7 +2,7 @@ body{
 	margin: 0;
 	padding: 0;
 	letter-spacing: 1px;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Oswald', sans-serif;
 	font-weight:200;
 	
 }
@@ -33,7 +33,6 @@ body{
 	margin-right: 250px;
 	margin-left: 250px;
 	font-size: 13px;
-	font-family: 'Roboto', sans-serif;
 }
 
 .scripture p{
@@ -185,12 +184,13 @@ body{
 }
 
 .footer_text{
+	width: 1200px;
+	height: 300px;
+    margin: 0 auto;
+    padding: 10px;
+    position: relative;
+	
 	display: block;
-	width: 75%;
-	height: 200px;
-	margin-right: 17%;
-	margin-left: 17%;
-	padding: 30px;
 }
 
 .footer_text a{
@@ -222,7 +222,7 @@ body{
     position: fixed; /* Stay in place */
     z-index: 1; /* Stay on top */
     top: 0;
-    left: 0;
+    right: 0;
     background-color: #111; /* Black*/
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 60px; /* Place content 60px from the top */
@@ -267,11 +267,18 @@ body{
 
 #menu_nav{
     transition: margin-right .5s;
-    padding: 20px;
-	color: fff;
-	float: left;
-	position: fixed;
+	border: 2px solid #ffffff;
+    padding: 10px;
+	margin: 20px;
+	color: #fff;
+	float: right;
 	font-family: 'Roboto', sans-serif;
+}
+
+#menu_nav:hover{
+	color: #000000;
+	background-color: #ffffff;
+	
 }
 
 
