--- a/css/Church_layout.css
+++ b/css/Church_layout.css
@@ -55,10 +55,17 @@ body{
 
 #menu_nav{
     transition: margin-right .5s;
-    padding: 20px;
-	color: fff;
+	border: 2px solid #ffffff;
+    padding: 10px;
+	margin: 20px;
+	color: #fff;
 	float: right;
 	font-family: 'Roboto', sans-serif;
+}
+#menu_nav:hover{
+	color: #000000;
+	background-color: #ffffff;
+	
 }
 
 
