--- a/css/About_layout.css
+++ b/css/About_layout.css
@@ -12,11 +12,13 @@ html, body{
 
 .header{
 	width: 100%;
-	height: 400px;
+	height: 600px;
 	text-align: center;
 	margin: 0px;
-	background-image: url(../images/K1_background.gif);
+	background-image: url(../images/IMG_0349.jpg);
 	background-attachment: fixed;
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 .words{
