--- a/css/Church_layout.css
+++ b/css/Church_layout.css
@@ -1,5 +1,5 @@
 html { 
-  background: url(../images/K1_WorshipBackground.png) no-repeat center center fixed; 
+  background: url(../images/IMG_0583.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -21,12 +21,12 @@ body{
 	width: 600px;
 	height: 400px;
 	display: block;
-	top: 0;
+	top:0;
 	bottom: 0;
 	left: 0;
 	right: 0;
 	text-align: center;
-	margin: auto;
+	margin: 200px auto auto auto;
 }
 
 .page_options{
