--- a/css/Church_layout.css
+++ b/css/Church_layout.css
@@ -10,6 +10,11 @@ body{
 
 hr{
 	width: 600px;
+
+}
+
+h4{
+	color: #565656;
 }
 
 /*-------------------------------
@@ -89,10 +94,12 @@ hr{
 		Inner Content
 ---------------------------------*/
 .inner_content{
-	padding: 50px auto;
+	margin: 100px auto;
 	width: 100%;
-	height: 675px;
+	height: auto;
 	color: #000000;
+	font-family: Ubuntu, sans-serif;
+	letter-spacing: 2px;
 	text-align: center;
 }
 
@@ -121,12 +128,12 @@ hr{
 }
 
 .mission_text h1{
-	font-size: 80px;
+	font-size: 110px;
 	margin: 10px;
 }
 
 .mission_text h2{
-	font-size: 40px;
+	font-size: 30px;
 	margin: 20px auto;
 	padding: 15px 20px;
 	width: 400px;
@@ -141,30 +148,114 @@ hr{
 
 
 /*-------------------------------
-		Inner Content2
+		Lower Content
 ---------------------------------*/
-.content_text{
+.lower_content{
+	margin: 100px auto;
+	width: 100%;
+	height: auto;
+	color: #000000;
+	font-family: 'Ubuntu', sans-serif;
+	text-align: center;
+	letter-spacing: 2px;
+}
+
+.contents_text{
 	display: inline-table;
 	width: 50%;
 	height: auto;
+	padding: 30px;
 }
 
 .row_block{
 	display: inline-table;
 	width:55%;
-	height: 200px;
+	height: auto;
 }
 
 .row_text{
-	width: 250px;
-	height: 160px;
+	width: 25%;
+	height: auto;
 	float: left;
-	margin: 40px;
+	margin: 2%;
 }
 
 
+/*-------------------------------
+		Our Ministries
+---------------------------------*/
+.our_ministries{
+	width: 100%;
+	height: 600px;
+	padding: 70px 30px;
+	background: url(../images/IMG_0304.jpg) no-repeat center center fixed; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+
+.ministries_text h1{
+	font-size: 110px;
+	margin: 10px;
+}
+
+.ministries_text h2{
+	font-size: 30px;
+	margin: 20px auto;
+	padding: 0px;
+	width: 500px;
+}
+
+.ministries_text{
+	position: relative;
+	margin: 90px;
+	text-align: center;
+	padding: 30px;
+}
 
 
+/*-------------------------------
+		Ministries Content
+---------------------------------*/
+.ministries_content{
+	margin: 100px auto;
+	width: 100%;
+	height: auto;
+	color: #000000;
+	font-family: 'Ubuntu', sans-serif;
+	text-align: center;
+	letter-spacing: 2px;
+}
+
+.row_blocks{
+	display: inline-table;
+	width:1100px;
+	height: auto;
+}
+
+.row_texts{
+	width: 300px;
+	height: auto;
+	float: left;
+	margin: 3%;
+}
+
+.row_texts h4{
+	text-align: left;
+}
+
+#learn_more{
+    padding: 10px;
+	color: #fff;
+	background-color: #000000;
+	text-decoration: none;
+	margin-top: 30px;
+}
+#learn_more:hover{
+	background-color: #565656;
+	
+}
 
 /*
 	---------------------------------------------------------------
@@ -244,7 +335,8 @@ hr{
 	background-color:#5287f9;
 	display: inline-table;
 	text-align: center;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Ubuntu', sans-serif;
+	letter-spacing: 2px;
 	font-weight: 200;
 }
 
